Junit 5 and bug fix